--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "packageManager": "yarn@4.3.0",
   "devDependencies": {
-    "@hckr_/blendid": "https://github.com/hckr-studio/blendid#758071ae6d2f3dc8535a0f51e962602785451918"
+    "@hckr_/blendid": "8.2.0"
   },
   "scripts": {
     "build": "blendid build",
