--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": true,
   "packageManager": "yarn@4.3.0",
   "devDependencies": {
-    "@hckr_/blendid": "8.2.0"
+    "@hckr_/blendid": "8.2.0",
+    "wrangler": "^3.61.0"
   },
   "scripts": {
     "build": "blendid build",
