--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,5 +9,9 @@ DISABLE_NOTIFIER = "true"
 [env.production]
 compatibility_date = "2024-06-18"
 
+  [env.production.kv_namespaces]
+  binding = "NEWS"
+  id = "0055dbe94f4b40de8222b48dda5a6961"
+
   [env.production.vars]
   DISABLE_NOTIFIER = "true"
