API endpoint for news posts

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "scripts": {
     "build": "blendid build",
     "start": "blendid"
+  },
+  "dependencies": {
+    "@thi.ng/transducers": "^9.0.5"
   }
 }
