--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
     "@hckr_/blendid": "8.2.0",
+    "fancy-log": "^2.0.0",
+    "undertaker-registry": "^2.0.0",
     "wrangler": "^3.61.0"
   },
   "scripts": {
