--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,5 +1,17 @@
 {
-  "name": "Blendid!",
+  "name": "Studnice Fest",
   "start_url": "/",
-  "display": "fullscreen"
+  "display": "fullscreen",
+  "icons": [
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    }
+  ]
 }
