--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@thi.ng/transducers": "9.0.12"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "4.20240722.0",
     "@hckr_/blendid": "8.5.5",
     "fancy-log": "2.0.0",
     "undertaker-registry": "2.0.0",
