--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "wrangler": "3.66.0"
   },
   "scripts": {
-    "build": "blendid build",
+    "build": "blendid build --production",
     "start": "blendid"
   }
 }
