--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20241112.0",
-    "@hckr_/blendid": "8.6.0",
+    "@hckr_/blendid": "9.0.0-beta.18",
     "fancy-log": "2.0.0",
     "undertaker-registry": "2.0.0",
     "wrangler": "3.86.1"
